--- a/Demo/test-output/old/Default suite/methods-alphabetical.html
+++ b/Demo/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a57a9b">  <td>18/08/29 15:20:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Assign.assign()[pri:0, instance:com.tests.demo.Assign@5c7fa833]">assign</td> 
-  <td>main@985397764</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>18/09/03 11:48:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateIssueTest.createIssue()[pri:0, instance:com.tests.demo.CreateIssueTest@4f6ee6e4]">createIssue</td> 
+  <td>main@1499867659</td>   <td></td> </tr>
 </table>
